# src/main/kotlin/com/example/shoppingList/ShoppingListController.kt
@@ -3,6 +3,7 @@ package com.example.shoppingList
 import com.example.plugins.FirebaseUserPrincipal
 import com.example.shoppingList.dto.toModel
 import com.example.shoppingList.dto.CreateShoppingListRequest
+import com.example.shoppingList.dto.UpdateShoppingListRequest
 
 
 class ShoppingListController(
@@ -10,35 +11,33 @@ class ShoppingListController(
 ) {
 
     suspend fun getLists(
-        principal: FirebaseUserPrincipal
-    ) =
-        shoppingListService.getLists(principal)
+        principal: FirebaseUserPrincipal) = shoppingListService.getLists(principal)
 
     suspend fun getList(
         principal: FirebaseUserPrincipal,
-        id: Int
-    ) =
-        shoppingListService.getList(
+        id: Int) = shoppingListService.getList(
             principal,
             id
         )
 
     suspend fun createList(
         principal: FirebaseUserPrincipal,
-        request: CreateShoppingListRequest
-    ) =
-        shoppingListService.createList(
+        request: CreateShoppingListRequest) = shoppingListService.createList(
             principal,
             request.name,
             request.items.map { it.toModel() }
         )
 
-    suspend fun deleteList(
+
+    suspend fun deleteList(principal: FirebaseUserPrincipal, id: Int) = shoppingListService.deleteList(principal, id)
+    suspend fun updateList(
         principal: FirebaseUserPrincipal,
-        id: Int
-    ) =
-        shoppingListService.deleteList(
+        request: UpdateShoppingListRequest) = shoppingListService.updateList(
             principal,
-            id
+            request.id,
+            request.name,
+            request.items.map {
+                it.toModel()
+            }
         )
 }
