# src/main/resources/com_example_ktor_db_app-openapi_6.yaml
@@ -710,6 +710,68 @@ paths:
                 type: "array"
                 items:
                   $ref: "#/components/schemas/ShoppingList"
+    put:
+      security:
+        - FirebaseAuth: [ ]
+      description: ""
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/UpdateShoppingListRequest"
+        required: true
+      responses:
+        "401":
+          description: "Unauthorized"
+          content:
+            '*/*':
+              schema:
+                type: "object"
+              examples:
+                Example#1:
+                  description: ""
+                  value:
+                    message: "null"
+                    status: 401
+                    timestamp: "null"
+                Example#2:
+                  description: ""
+                  value:
+                    message: "null"
+                    status: 401
+                    timestamp: "null"
+        "200":
+          description: "OK"
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/ShoppingList"
+        "400":
+          description: "Bad Request"
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+              examples:
+                Example#1:
+                  description: ""
+                  value:
+                    message: "null"
+                    status: 400
+                    timestamp: "null"
+        "500":
+          description: "Internal Server Error"
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+              examples:
+                Example#1:
+                  description: ""
+                  value:
+                    message: "Internal server error"
+                    status: 500
+                    timestamp: "null"
     post:
       security:
         - FirebaseAuth: [ ]
@@ -766,7 +828,9 @@ paths:
       security:
         - FirebaseAuth: [ ]
       summary: "10. Get available products from list"
-      description: "Use created Store Id, and created Shopping List Id in the query"
+      description: |
+        Use created Store Id, and created Shopping List Id in the query
+        There's only bread int the store, no milk
       parameters:
         - name: "storeId"
           in: "path"
@@ -2167,6 +2231,22 @@ components:
         - "message"
         - "status"
         - "timestamp"
+    UpdateShoppingListRequest:
+      type: "object"
+      properties:
+        id:
+          type: "integer"
+          format: "int32"
+        name:
+          type: "string"
+        items:
+          type: "array"
+          items:
+            $ref: "#/components/schemas/CreateShoppingListItemRequest"
+      required:
+        - "id"
+        - "name"
+        - "items"
     LoginRequest:
       type: "object"
       properties:
